# cstringpp

./: .gitignore  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: test.yml
include/: cstringpp.hpp
include/cstringpp/: core.hpp  detail.hpp  helpers.hpp
test/: test.cpp
